# momcalc

./: configure.ac
src/: Makefile.am  momicalc.c
